docs/api/qiskit/0.29/qiskit.chemistry.algorithms.VQEAdapt.mdx
---
title: VQEAdapt (v0.29)
description: API reference for qiskit.chemistry.algorithms.VQEAdapt in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.chemistry.algorithms.VQEAdapt
---

# VQEAdapt

<Class id="qiskit.chemistry.algorithms.VQEAdapt" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/minimum_eigen_solvers/vqe_adapt.py" signature="VQEAdapt(operator, var_form_base, optimizer, initial_point=None, excitation_pool=None, threshold=1e-05, delta=1, max_iterations=None, max_evals_grouped=1, aux_operators=None, quantum_instance=None)" modifiers="class">
  Bases: `qiskit.aqua.algorithms.vq_algorithm.VQAlgorithm`

  DEPRECATED. The Adaptive VQE algorithm.

  See [https://arxiv.org/abs/1812.11173](https://arxiv.org/abs/1812.11173)

  **Parameters**

  *   **operator** (`LegacyBaseOperator`) – Qubit operator
  *   **var\_form\_base** (`VariationalForm`) – base parameterized variational form
  *   **optimizer** (`Optimizer`) – the classical optimizer algorithm
  *   **initial\_point** (`Optional`\[`ndarray`]) – optimizer initial point
  *   **excitation\_pool** (`Optional`\[`List`\[`WeightedPauliOperator`]]) – list of excitation operators
  *   **threshold** (`float`) – absolute threshold value for gradients, has a min. value of 1e-15.
  *   **delta** (`float`) – finite difference step size for gradient computation, has a min. value of 1e-5.
  *   **max\_iterations** (`Optional`\[`int`]) – maximum number of macro iterations of the VQEAdapt algorithm.
  *   **max\_evals\_grouped** (`int`) – max number of evaluations performed simultaneously
  *   **aux\_operators** (`Optional`\[`List`\[`LegacyBaseOperator`]]) – Auxiliary operators to be evaluated at each eigenvalue
  *   **quantum\_instance** (`Union`\[`QuantumInstance`, `Backend`, `BaseBackend`, `None`]) – Quantum Instance or Backend

  **Raises**

  *   **ValueError** – if var\_form\_base is not an instance of UCCSD.
  *   **See also** – qiskit/chemistry/components/variational\_forms/uccsd\_adapt.py

  ## Methods

  <span id="qiskit-chemistry-algorithms-vqeadapt-cleanup-parameterized-circuits" />

  ### cleanup\_parameterized\_circuits

  <Function id="qiskit.chemistry.algorithms.VQEAdapt.cleanup_parameterized_circuits" signature="VQEAdapt.cleanup_parameterized_circuits()">
    set parameterized circuits to None
  </Function>

  <span id="qiskit-chemistry-algorithms-vqeadapt-find-minimum" />

  ### find\_minimum

  <Function id="qiskit.chemistry.algorithms.VQEAdapt.find_minimum" signature="VQEAdapt.find_minimum(initial_point=None, var_form=None, cost_fn=None, optimizer=None, gradient_fn=None)">
    Optimize to find the minimum cost value.

    **Parameters**

    *   **initial\_point** (`Optional`\[`ndarray`]) – If not None will be used instead of any initial point supplied via constructor. If None and None was supplied to constructor then a random point will be used if the optimizer requires an initial point.
    *   **var\_form** (`Union`\[`QuantumCircuit`, `VariationalForm`, `None`]) – If not None will be used instead of any variational form supplied via constructor.
    *   **cost\_fn** (`Optional`\[`Callable`]) – If not None will be used instead of any cost\_fn supplied via constructor.
    *   **optimizer** (`Optional`\[`Optimizer`]) – If not None will be used instead of any optimizer supplied via constructor.
    *   **gradient\_fn** (`Optional`\[`Callable`]) – Optional gradient function for optimizer

    **Returns**

    Optimized variational parameters, and corresponding minimum cost value.

    **Return type**

    dict

    **Raises**

    **ValueError** – invalid input
  </Function>

  <span id="qiskit-chemistry-algorithms-vqeadapt-get-optimal-circuit" />

  ### get\_optimal\_circuit

  <Function id="qiskit.chemistry.algorithms.VQEAdapt.get_optimal_circuit" signature="VQEAdapt.get_optimal_circuit()">
    get optimal circuit
  </Function>

  <span id="qiskit-chemistry-algorithms-vqeadapt-get-optimal-cost" />

  ### get\_optimal\_cost

  <Function id="qiskit.chemistry.algorithms.VQEAdapt.get_optimal_cost" signature="VQEAdapt.get_optimal_cost()">
    get optimal cost
  </Function>

  <span id="qiskit-chemistry-algorithms-vqeadapt-get-optimal-vector" />

  ### get\_optimal\_vector

  <Function id="qiskit.chemistry.algorithms.VQEAdapt.get_optimal_vector" signature="VQEAdapt.get_optimal_vector()">
    get optimal vector
  </Function>

  <span id="qiskit-chemistry-algorithms-vqeadapt-get-prob-vector-for-params" />

  ### get\_prob\_vector\_for\_params

  <Function id="qiskit.chemistry.algorithms.VQEAdapt.get_prob_vector_for_params" signature="VQEAdapt.get_prob_vector_for_params(construct_circuit_fn, params_s, quantum_instance, construct_circuit_args=None)">
    Helper function to get probability vectors for a set of params
  </Function>

  <span id="qiskit-chemistry-algorithms-vqeadapt-get-probabilities-for-counts" />

  ### get\_probabilities\_for\_counts

  <Function id="qiskit.chemistry.algorithms.VQEAdapt.get_probabilities_for_counts" signature="VQEAdapt.get_probabilities_for_counts(counts)">
    get probabilities for counts
  </Function>

  <span id="qiskit-chemistry-algorithms-vqeadapt-run" />

  ### run

  <Function id="qiskit.chemistry.algorithms.VQEAdapt.run" signature="VQEAdapt.run(quantum_instance=None, **kwargs)">
    Execute the algorithm with selected backend.

    **Parameters**

    *   **quantum\_instance** (`Union`\[`QuantumInstance`, `Backend`, `BaseBackend`, `None`]) – the experimental setting.
    *   **kwargs** (*dict*) – kwargs

    **Returns**

    results of an algorithm.

    **Return type**

    dict

    **Raises**

    [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – If a quantum instance or backend has not been provided
  </Function>

  <span id="qiskit-chemistry-algorithms-vqeadapt-set-backend" />

  ### set\_backend

  <Function id="qiskit.chemistry.algorithms.VQEAdapt.set_backend" signature="VQEAdapt.set_backend(backend, **kwargs)">
    Sets backend with configuration.

    **Return type**

    `None`
  </Function>

  ## Attributes

  ### backend

  <Attribute id="qiskit.chemistry.algorithms.VQEAdapt.backend">
    Returns backend.

    **Return type**

    `Union`\[`Backend`, `BaseBackend`]
  </Attribute>

  ### initial\_point

  <Attribute id="qiskit.chemistry.algorithms.VQEAdapt.initial_point">
    Returns initial point

    **Return type**

    `Optional`\[`ndarray`]
  </Attribute>

  ### optimal\_params

  <Attribute id="qiskit.chemistry.algorithms.VQEAdapt.optimal_params" />

  ### optimizer

  <Attribute id="qiskit.chemistry.algorithms.VQEAdapt.optimizer">
    Returns optimizer

    **Return type**

    `Optional`\[`Optimizer`]
  </Attribute>

  ### quantum\_instance

  <Attribute id="qiskit.chemistry.algorithms.VQEAdapt.quantum_instance">
    Returns quantum instance.

    **Return type**

    `Optional`\[`QuantumInstance`]
  </Attribute>

  ### random

  <Attribute id="qiskit.chemistry.algorithms.VQEAdapt.random">
    Return a numpy random.
  </Attribute>

  ### var\_form

  <Attribute id="qiskit.chemistry.algorithms.VQEAdapt.var_form">
    Returns variational form

    **Return type**

    `Union`\[`QuantumCircuit`, `VariationalForm`, `None`]
  </Attribute>
</Class>

